--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.0",
         "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
+        "laravel/ui": "^1.1",
         "s-ichikawa/laravel-sendgrid-driver": "^2.1"
     },
     "require-dev": {
